--- a/public/home.html
+++ b/public/home.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Device Motion Energy Test</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -25,7 +27,6 @@
       <div class="text-white">Loading...</div>
       <script>
         // if loading is not finished in 5 seconds, redirect to home.html
-        
       </script>
     </section>
     <script src="home.js"></script>
