--- a/public/home.html
+++ b/public/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Device Motion Energy Test</title>
+    <title>Device Motion Energy</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -31,8 +31,8 @@
     </section>
     <script src="home.js"></script>
     <main>
-      <h1>Device Motion Test</h1>
-      <p>기기를 움직여 보세요!</p>
+      <!-- <h1>Device Motion Test</h1>
+      <p>기기를 움직여 보세요!</p> -->
       <textarea id="motionData" cols="80" rows="30"></textarea>
     </main>
   </body>
